Fix ip address overflow issue

--- a/Dnn.CommunityForums/themes/community-bootstrap/theme.css
+++ b/Dnn.CommunityForums/themes/community-bootstrap/theme.css
@@ -240,16 +240,15 @@
 .dnn-community-forums .dcf-topic-view .dcf-topic-content {
   width: 100%;
 }
-.dnn-community-forums .dcf-topic-view .dcf-topic-content .dcf-post-body img {
-  max-width: 100% !important;
-  height: auto !important;
-}
 .dnn-community-forums .dcf-topic-view .dcf-topic-content .dcf-topic-content-top {
   border-bottom: solid 1px #ddd;
 }
 .dnn-community-forums .dcf-topic-view .dcf-topic-info {
   width: 100%;
   border-bottom: solid 1px #ddd;
+}
+.dnn-community-forums .dcf-topic-view .dcf-topic-info .dcf-user-ipaddress {
+  overflow: hidden;
 }
 @media screen and (min-width: 768px) {
   .dnn-community-forums .dcf-topic-view .dcf-topic-content {
